# goldstein-cap1-opengl

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
